# UBB-Projects

./: README.md
Advanced Programming Methods/Toy Interpretor/: log12.txt  log13.txt  log3.txt
Artificial Intelligence/: Lab1.ipynb
Computer Networks/Lab Test/: client.py  server.py
Computer Networks/Packet Tracer/: packet tracer calculations.txt  tutorial.pkt  tutorial2.pkt
Computer System Architecture/Lab 1/: set_4_mul_div_20.asm
Computer System Architecture/Lab 11/: function.asm  function.lst  text.lst
Computer System Architecture/Lab 13/: main.c  main.ilk
Computer System Architecture/Lab 2/: 1.asm  1.lst  2.asm  2.lst  3.asm  3.lst  4.asm  4.lst  5.asm  5.lst  (+2 more)
Data Structures and Algorithms/Set on Dynamic Array/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h
Data Structures and Algorithms/Sorted Set on Linked List/: App.cpp  CMakeLists.txt  ShortTest.cpp  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
Data Structures and Algorithms/SortedBag on BST/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
Database Management Systems/: readme.txt
Databases/: Practice.sql  lab1.sql  lab2.sql  lab3.sql  lab5.sql
Object Oriented Programming/a3-4-913-Hornea-Dorian-Alexandru/: CMakeLists.txt  domain.c  domain.h  dynamicArray.c  dynamicArray.h  main.c  repository.c  repository.h  service.c  service.h  ui.c  ui.h
Probability and Statistics/: ex1.m  ex2.m  lab3ps.txt  lab4.m  lab5.m  lab5_1.m  lab5_B.m  lab6_1_a.m  lab6_1_b.m  lab6_2.m  practic.m
Software Engineering/: readme.txt
Systems for Design and Implementation/: Albums.csproj  Program.cs
Web Programming/: readme.txt
(+168 files in other folders)
